--- a/snack 2/index.html
+++ b/snack 2/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="card">
+        
+    </div>
     <script src="./main.js"></script>
 </body>
 </html>
